# gdk

./: CMakeLists.txt
src/: applicationFramework.cpp  applicationFramework.h  assetManager.cpp  assetManager.h  callbacks.T  callbacks.cpp  callbacks.h  collisionDetection.T  collisionDetection.h  collisionHandler.cpp  collisionHandler.h  color.cpp  color.h  config_gdk.cpp  config_gdk.h  customEventHandler.cpp  customEventHandler.h  debugNode.cpp  debugNode.h  easing.cpp  easing.h  localRef.h  physic_utils.h  scene.cpp  scene.h  serializable.T  serializable.cpp  serializable.h  slotPool.T  slotPool.h  typeHandler.T  typeHandler.h  typeUtils.T  typeUtils.h  utils.T  utils.cpp  utils.h
src/anim/: animLayer.cpp  animLayer.h  animPostProcess.cpp  animPostProcess.h  animSequence.cpp  animSequence.h  animSequenceControl.cpp  animSequenceControl.h  animStack.cpp  animStack.h  config_anim.cpp  config_anim.h  partFilterAnim.cpp  partFilterAnim.h
src/csv/: CSVParser.cpp  CSVParser.h
src/ecs/: component.cpp  component.h  entity.cpp  entity.h
src/fsm/: fsm.cpp  fsm.h  state.cpp  state.h
src/input/: inputDeviceInterface.cpp  inputDeviceInterface.h  inputInterfaceManager.cpp  inputInterfaceManager.h
src/instance/: config_instance.cpp  config_instance.h  instanceManager.T  instanceManager.cpp  instanceManager.h
src/light/: areaLightNode.cpp  areaLightNode.h  config_light.cpp  config_light.h  directionalLightNode.cpp  directionalLightNode.h  lightBase.cpp  lightBase.h  lightCallbackData.cpp  lightCallbackData.h  pointLightNode.cpp  pointLightNode.h  spotLightNode.cpp  (+3 more)
(+94 files in other folders)
